--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   intl: ^0.19.0
   flutter_localization: ^0.2.1
   flutter_svg: ^2.0.10+1
-  flutter_launcher_icons: ^0.14.1
+  flutter_launcher_icons: ^0.14.4
   flutter_inappwebview: ^6.0.0
   flutter_secure_storage: ^9.2.2
   auto_route: ^9.2.2
@@ -97,3 +97,9 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/audios/
+    - assets/logo/
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo/app_icon.png"
